# estring

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  example.cpp  manifest
estring/: .gitignore  buildfile  enum-parser.cxx  enum-parser.hxx  estring.cxx  testscript
src/: CMakeLists.txt  main.cpp  parser.cpp  parser.h  util.h
stringifier/: .gitignore  buildfile  enum-parser.cxx  enum-parser.hxx  stringifier.cxx  testscript
test/: CMakeLists.txt  parser.cpp
